# QuickBooks-GUI-API

./: .gitignore  README.md  gen_struct.py  pyproject.toml  setup_cli.py  struct.txt
.github/workflows/: publish.yml
configs/defaults/: defaults_qb-gui-api.toml
samples/file_manager/: Test Case - File Manager.txt  test_file_manager.py
samples/image_manager/: test_image_manager.py
samples/invoices/: test_invoices.py
samples/orc_manager/: test_ocr_manager.py
samples/quickbooks_gui_api/: test_quickbooks_gui_api.py
samples/reports/: test_reports.py
samples/utilities/: test_utilities.py
samples/window_manager/: test_window_manager.py
src/quickbooks_gui_api/: __init__.py  __main__.py  gui_api.py  setup.py
src/quickbooks_gui_api/apis/: __init__.py  api_exceptions.py  invoices.py  reports.py
src/quickbooks_gui_api/managers/: __init__.py  file.py  helper.py  image.py  manager_exceptions.py  ocr.py  processes.py  string.py  window.py  windows.py
src/quickbooks_gui_api/models/: DEPRECATED - window.py  __init__.py  element.py  image.py  invoice.py  report.py  window.py
src/quickbooks_gui_api/utilities/: __init__.py  utilities.py
tests/: test_image_manager.py  test_ocr_manager.py
